tdf#153102: use given RedrawArea in DoProcessDisplay

In ObjectContactOfPageView::DoProcessDisplay someone changed
(seven years ago) to ignore the given RedrawArea if
comphelper::LibreOfficeKit::isActive(). Using and setting that
RedrawArea is needed to get the visual clipping against e.g.
PageBounds in Writer paint working. Adding that again.

Change-Id: If628039379c2756aac8865c3632e37c19993d0da
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155262
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>